--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         {{ content }}
-        <script src="/assets/js/tabs.js"></script>
+        <script src="./tabs.js"></script>
     </body>
 </html>
